[ADDED] Ticket Functionality Update,Delete and Admin Side Confirmation

--- a/templates/base.html
+++ b/templates/base.html
@@ -11,7 +11,7 @@
         <title>Register -Webmigrates HRMS</title>
 
 		<!-- Favicon -->
-        <link rel="shortcut icon" type="image/x-icon" href="{% static 'img/logo.jpg' %}">
+        <link rel="shortcut icon" type="image/x-icon" href="{% static 'img/logo.png' %}">
 
 		<!-- Bootstrap CSS -->
         <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
@@ -67,7 +67,7 @@
 				<!-- Logo -->
 				<div class="header-left">
 					<a class="logo" href="">
-						<img alt="" height="40" src="{% static 'img/logo.jpg' %}" width="40">
+						<img alt="" height="40" src="{% static 'img/logo.png' %}" width="40">
 					</a>
 				</div>
 				<!-- /Logo -->
