--- a/templates/admin/register.html
+++ b/templates/admin/register.html
@@ -11,7 +11,7 @@
         <title>Register -Webmigrates HRMS</title>
 
 		<!-- Favicon -->
-        <link rel="shortcut icon" type="image/x-icon" href="{% static 'img/logo.jpg' %}">
+        <link rel="shortcut icon" type="image/x-icon" href="{% static 'img/logo.png' %}">
 
 		<!-- Bootstrap CSS -->
         <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
@@ -58,7 +58,7 @@
 
 					<!-- Account Logo -->
 					<div class="account-logo">
-						<a href=""><img src="{% static 'img/logo.jpg' %}" alt="Webmigrates Technologies"></a>
+						<a href=""><img src="{% static 'img/logo.png' %}" alt="Webmigrates Technologies"></a>
 					</div>
 					<!-- /Account Logo -->
 
