--- a/templates/admin/add_education_info.html
+++ b/templates/admin/add_education_info.html
@@ -6,13 +6,13 @@
     <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <h2 class="modal-title">Add Education Informations</h2>
+                <h2 class="modal-title">Add Education Informations </h2>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
             </div>
             <div class="modal-body">
-                <form action="{% url 'AdminAddEducationInfo' user.id %}" method="post">
+                <form action="{% url 'AdminAddEducationInfo' user_id %}" method="post">
                     {% csrf_token %}
                     <div class="row">
                         <div class="col-md-6">
