--- a/templates/admin/edit_experience_info.html
+++ b/templates/admin/edit_experience_info.html
@@ -12,7 +12,7 @@
                 </button>
             </div>
             <div class="modal-body">
-                <form action="{% url 'AdminEditExperienceInfo' user.id edit_experience_info.id %}" method="post">
+                <form action="{% url 'AdminEditExperienceInfo' user_id edit_experience_info.id %}" method="post">
                     {% csrf_token %}
                     <div class="row">
                         <div class="col-md-6">
@@ -42,7 +42,8 @@
                         </div>
                     </div>
                     <div class="submit-section">
-                        <button class="btn btn-primary submit-btn">Submit</button>
+                        <a href="{% url 'AdminDeleteExperienceInfo' id=user_id exp_id=edit_experience_info.id %}" class="btn btn-danger submit-btn mr-5">Delete</a>
+                        <button class="btn btn-primary submit-btn ml-5">Submit</button>
                     </div>
                 </form>
             </div>
