--- a/templates/employee/edit_education_info.html
+++ b/templates/employee/edit_education_info.html
@@ -15,7 +15,6 @@
                 <form action="{% url 'EmpEditEducationInfo' user_id=user.id edu_id=edit_education_info.id %}" method="post">
                     {% csrf_token %}
                     <div class="card">
-                        <h3 class="card-title">Education Information <a href="javascript:void(0);" class="delete-icon"><i class="fa fa-trash-o"></i></a></h3>
                         <div class="row">
                             <div class="col-md-6">
                                 <div class="form-group">
@@ -50,7 +49,8 @@
                         </div>
                     </div>
                     <div class="submit-section">
-                        <button class="btn btn-primary submit-btn">Submit</button>
+                        <a href="{% url 'EmpDeleteEducationInfo' id=edit_education_info.employee.id edu_id=edit_education_info.id %}" class="btn btn-danger submit-btn mr-5">Delete</a>
+                        <button class="btn btn-primary submit-btn ml-5" type="submit">Submit</button>
                     </div>
                 </form>
             </div>
