--- a/templates/employee/employees_list.html
+++ b/templates/employee/employees_list.html
@@ -72,7 +72,7 @@
 										<tr>
 											<td>
 												<h2 class="table-avatar">
-													<a href="{% url 'EmpProfileView' employee.id %}" class="avatar"><img alt="" src="assets/img/profiles/avatar-02.jpg"></a>
+													<a href="{% url 'EmpProfileView' employee.id %}" class="avatar"><img alt="" src="{{employee.avatar.url}}"></a>
 													<a href="{% url 'EmpProfileView' employee.id %}">{{employee.username}} <span>{{employee.designation}}</span></a>
 												</h2>
 											</td>
