[Add] Search functonality add

--- a/templates/admin/edit_technology.html
+++ b/templates/admin/edit_technology.html
@@ -2,11 +2,11 @@
 {% load static %}
 
 <!-- Edit Technology Modal -->
-<div id="edit_technology_model" class="modal fade" role="dialog" tabindex="-1" aria-hidden="true" aria-labelledby="editModelToggleLabel">
+<div id="ticket_status_update" class="modal fade" role="dialog" tabindex="-1" aria-hidden="true" aria-labelledby="editModelToggleLabel">
     <div class="modal-dialog modal-dialog-centered" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <h3 class="modal-title">Edit Technology</h3>
+                <h3 class="modal-title">Update Ticket Status</h3>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
@@ -17,7 +17,7 @@
                         {{ form|crispy }}
                     </div>
                     <div class="submit-section">
-                        <button class="btn btn-primary submit-btn" type="submit">Save</button>
+                        <button class="btn btn-primary submit-btn" type="submit">Update</button>
                     </div>
                 </form>
             </div>
