--- a/templates/admin/leaves.html
+++ b/templates/admin/leaves.html
@@ -30,60 +30,48 @@
 					
 					<!-- Search Filter -->
 					<div class="row filter-row">
-					   <div class="col-sm-6 col-md-3 col-lg-3 col-xl-2 col-12">
-							<div class="form-group form-focus">
-								<input type="text" class="form-control floating">
-								<label class="focus-label">Employee Name</label>
+						<div class="col-sm-6 col-md-3">
+							<div class="form-group form-focus ">
+								<input type="text" class="form-control floating" id="name-search">
+								<label class="focus-label">Employee</label>
 							</div>
-					   </div>
-					   <div class="col-sm-6 col-md-3 col-lg-3 col-xl-2 col-12">
-							<div class="form-group form-focus select-focus">
-								<select class="select floating">
-									<option> -- Select -- </option>
-									<option>Casual Leave</option>
-									<option>Medical Leave</option>
-									<option>Loss of Pay</option>
-								</select>
+						</div>
+						<div class="col-sm-6 col-md-3">
+							<div class="form-group form-focus ">
+								<input type="text" class="form-control floating" id="leave_type">
 								<label class="focus-label">Leave Type</label>
 							</div>
-					   </div>
-					   <div class="col-sm-6 col-md-3 col-lg-3 col-xl-2 col-12">
+						</div>
+						<div class="col-sm-6 col-md-2">
 							<div class="form-group form-focus select-focus">
-								<select class="select floating">
-									<option> -- Select -- </option>
-									<option> Pending </option>
-									<option> Approved </option>
-									<option> Rejected </option>
+								<input type="date" class="form-control floating" id="from_date">
+								<label class="focus-label">From Date</label>
+							</div>
+						</div>
+						<div class="col-sm-6 col-md-2">
+							<div class="form-group form-focus select-focus">
+								<input type="date" class="form-control floating" id="to_date">
+								<label class="focus-label">To Date</label>
+							</div>
+						</div>
+						<div class="col-sm-6 col-md-2">
+							<div class="form-group form-focus select-focus">
+								<select class="form-control floating" id="leave_status">
+									<option value="">Select Status</option>
+									{% for status in leave_status %}
+										<option value="{{ status.0 }}">{{ status.1 }}</option>
+									{% endfor %}
 								</select>
 								<label class="focus-label">Leave Status</label>
 							</div>
-					   </div>
-					   <div class="col-sm-6 col-md-3 col-lg-3 col-xl-2 col-12">
-							<div class="form-group form-focus">
-								<div class="cal-icon">
-									<input class="form-control floating datetimepicker" type="text">
-								</div>
-								<label class="focus-label">From</label>
-							</div>
 						</div>
-					   <div class="col-sm-6 col-md-3 col-lg-3 col-xl-2 col-12">
-							<div class="form-group form-focus">
-								<div class="cal-icon">
-									<input class="form-control floating datetimepicker" type="text">
-								</div>
-								<label class="focus-label">To</label>
-							</div>
-						</div>
-					   <div class="col-sm-6 col-md-3 col-lg-3 col-xl-2 col-12">
-							<a href="#" class="btn btn-success btn-block"> Search </a>
-					   </div>
-                    </div>
+					</div>
 					<!-- /Search Filter -->
 					
 					<div class="row">
 						<div class="col-md-12">
 							<div class="table-responsive">
-								<table class="table table-striped custom-table mb-0 datatable">
+								<table class="table table-striped custom-table mb-0" id="admin_leave_table">
 									<thead>
 										<tr>
 											<th>Employee</th>
@@ -109,7 +97,7 @@
 											<td>{{leave.leave_from|date:"j - M - Y"}}</td>
 											<td>{{leave.leave_to|date:"j - M - Y"}}</td>
 											<td>{{leave.leave_days}} days</td>
-											<td>{{leave.leave_reason}}</td>
+											<td class="w-75 text-wrap">{{leave.leave_reason}}</td>
 											<td class="text-center">
 												<div class="dropdown action-label" >
 													<form action="{% url 'AdminLeaveStatusUpdate' leave.id %}" method="post">
@@ -134,6 +122,24 @@
 				
             </div>
 			<!-- /Page Wrapper -->
+<script type="text/javascript" src="{% static 'js/jquery-3.5.1.min.js' %}"></script>
+<script type="text/javascript" src="{% static 'js/jquery.dataTables.min.js' %}"></script>
+<script>
+$(document).ready(function () {
+	var table = $('#admin_leave_table').DataTable({
+		dom: 'Blrtip',
+	});
+	 $('#name-search').on('keyup', function () {
+		table.column(0).search(this.value).draw();
+	});
+	 $('#leave_type').on('keyup', function () {
+		table.column(1).search(this.value).draw();
+	});
+	$('#leave_status').on('change', function () {
+		table.column(7).search(this.value).draw();
+	});
+});
+</script>
 <script>
     window.setTimeout(function() {
         $(".alert").fadeTo(500, 0).slideUp(500, function(){
