--- a/templates/employee/employees_list.html
+++ b/templates/employee/employees_list.html
@@ -3,10 +3,10 @@
 {% block body %}
 			<!-- Page Wrapper -->
             <div class="page-wrapper">
-			
+
 				<!-- Page Content -->
                 <div class="content container-fluid">
-				
+
 					<!-- Page Header -->
 					<div class="page-header">
 						<div class="row align-items-center">
@@ -20,43 +20,55 @@
 						</div>
 					</div>
 					<!-- /Page Header -->
-					
+
 					<!-- Search Filter -->
 					<div class="row filter-row">
-						<div class="col-sm-6 col-md-3">  
+						<div class="col-sm-6 col-md-3">
 							<div class="form-group form-focus">
-								<input type="text" class="form-control floating">
-								<label class="focus-label">Employee ID</label>
-							</div>
-						</div>
-						<div class="col-sm-6 col-md-3">  
-							<div class="form-group form-focus">
-								<input type="text" class="form-control floating">
+								<input type="text" class="form-control floating" id="name-search">
 								<label class="focus-label">Employee Name</label>
 							</div>
 						</div>
-						<div class="col-sm-6 col-md-3"> 
+						<div class="col-sm-6 col-md-3">
 							<div class="form-group form-focus select-focus">
-								<select class="select floating"> 
-									<option>Select Designation</option>
-									<option>Web Developer</option>
-									<option>Web Designer</option>
-									<option>Android Developer</option>
-									<option>Ios Developer</option>
+								<select class="form-control floating" id="department">
+									<option value="">Select Department</option>
+									{% for department in emp_department %}
+									<option value="{{department.department_name}}">{{department.department_name}}</option>
+									{% endfor %}
+								</select>
+								<label class="focus-label">Department</label>
+							</div>
+						</div>
+						<div class="col-sm-6 col-md-3">
+							<div class="form-group form-focus select-focus">
+								<select class="form-control floating" id="designation">
+									<option value="">Select Department</option>
+									{% for designation in emp_designation %}
+									<option value="{{designation.designation_name}}">{{designation.designation_name}}</option>
+									{% endfor %}
 								</select>
 								<label class="focus-label">Designation</label>
 							</div>
 						</div>
-						<div class="col-sm-6 col-md-3">  
-							<a href="#" class="btn btn-success btn-block"> Search </a>  
-						</div>     
-                    </div>
+						<div class="col-sm-6 col-md-3">
+							<div class="form-group form-focus select-focus">
+								<select class="form-control floating" id="technology">
+									<option value="">Select Department</option>
+									{% for technology in emp_technology %}
+									<option value="{{technology.technology_name}}">{{technology.technology_name}}</option>
+									{% endfor %}
+								</select>
+								<label class="focus-label">Technology</label>
+							</div>
+						</div>
+					</div>
 					<!-- /Search Filter -->
-					
+
 					<div class="row">
 						<div class="col-md-12">
 							<div class="table-responsive">
-								<table class="table table-striped custom-table datatable">
+								<table class="table table-striped custom-table" id="myTable">
 									<thead>
 										<tr>
 											<th>Name</th>
@@ -64,7 +76,8 @@
 											<th>Email</th>
 											<th>Mobile</th>
 											<th class="text-nowrap">Join Date</th>
-											<th>Role</th>
+											<th>Department</th>
+											<th>Technology</th>
 										</tr>
 									</thead>
 									<tbody>
@@ -81,6 +94,7 @@
 											<td>{{employee.phone}}</td>
 											<td>{{employee.date_joined|date:"d M Y"}}</td>
 											<td>{{employee.department}}</td>
+											<td>{{employee.technology}}</td>
 										</tr>
 									{% endfor %}
 									</tbody>
@@ -92,4 +106,27 @@
 				<!-- /Page Content -->
             </div>
 			<!-- /Page Wrapper -->
+ <!-- /Page Wrapper -->
+    <script type="text/javascript" src="{% static 'js/jquery-3.5.1.min.js' %}"></script>
+    <script type="text/javascript" src="{% static 'js/jquery.dataTables.min.js' %}"></script>
+    <script type="text/javascript">
+        $(document).ready(function () {
+            var table = $('#myTable').DataTable({
+            	dom: 'Blrtip',
+            });
+             $('#name-search').on('keyup', function () {
+                table.column(0).search(this.value).draw();
+            });
+            $('#department').on('change', function () {
+                table.column(5).search(this.value).draw();
+            });
+            $('#designation').on('change', function () {
+                table.column(0).search(this.value).draw();
+            });
+            $('#technology').on('change', function () {
+                table.column(6).search(this.value).draw();
+            });
+        });
+
+    </script>
 {% endblock body %}
