--- a/templates/employee/leaves-employee.html
+++ b/templates/employee/leaves-employee.html
@@ -29,6 +29,40 @@
 						</div>
 					</div>
 					<!-- /Page Header -->
+
+					<!-- Search Filter -->
+					<div class="row filter-row">
+						<div class="col-sm-6 col-md-3">
+							<div class="form-group form-focus ">
+								<input type="text" class="form-control floating" id="name-search">
+								<label class="focus-label">Leave Type</label>
+							</div>
+						</div>
+						<div class="col-sm-6 col-md-3">
+							<div class="form-group form-focus select-focus">
+								<input type="date" class="form-control floating" id="from_date">
+								<label class="focus-label">From Date</label>
+							</div>
+						</div>
+						<div class="col-sm-6 col-md-3">
+							<div class="form-group form-focus select-focus">
+								<input type="date" class="form-control floating" id="to_date">
+								<label class="focus-label">To Date</label>
+							</div>
+						</div>
+						<div class="col-sm-6 col-md-3">
+							<div class="form-group form-focus select-focus">
+								<select class="form-control floating" id="leave_status">
+									<option value="">Select Status</option>
+									{% for status in leave_status %}
+										<option value="{{ status.0 }}">{{ status.1 }}</option>
+									{% endfor %}
+								</select>
+								<label class="focus-label">Leave Status</label>
+							</div>
+						</div>
+					</div>
+					<!-- /Search Filter -->
 					
 					<!-- Leave Statistics -->
 					<div class="row">
@@ -63,14 +97,14 @@
 					<div class="row">
 						<div class="col-md-12">
 							<div class="table-responsive">
-								<table class="table table-striped custom-table mb-0 datatable">
+								<table class="table table-striped custom-table mb-0" id="leave_table">
 									<thead>
 										<tr>
 											<th>Leave Type</th>
 											<th>From</th>
 											<th>To</th>
 											<th>No of Days</th>
-											<th>Reason</th>
+											<th class="w-25 text-wrap">Reason</th>
 											<th class="text-center">Status</th>
 											<th class="text-right">Actions</th>
 										</tr>
@@ -82,7 +116,7 @@
 											<td>{{leave.leave_from|date:"j - M - Y"}}</td>
 											<td>{{leave.leave_to|date:"j - M - Y"}}</td>
 											<td>{{leave.leave_days}}  Days</td>
-											<td>{{leave.leave_reason}}</td>
+											<td class="w-75 text-wrap">{{leave.leave_reason}}</td>
 											<td class="text-center">
 												<div class="action-label">
 													<a class="border rounded-pill p-1 text-dark"><i class="fa fa-dot-circle-o {% if leave.leave_status == 'Declined' %}text-danger{% elif leave.leave_status == 'Approved' %}text-success{% else %}text-info{% endif %}"></i> {{leave.leave_status}}</a>
@@ -135,8 +169,26 @@
 				<!-- /Delete Leave Modal -->
             </div>
 			<!-- /Page Wrapper -->
-
+<script type="text/javascript" src="{% static 'js/jquery-3.5.1.min.js' %}"></script>
+<script type="text/javascript" src="{% static 'js/jquery.dataTables.min.js' %}"></script>
 <script>
+$(document).ready(function () {
+	var table = $('#leave_table').DataTable({
+		dom: 'Blrtip',
+	});
+	 $('#name-search').on('keyup', function () {
+		table.column(0).search(this.value).draw();
+	});
+
+
+<!-- lllll -------------------------------------- date functionality pending-->
+
+
+
+	$('#leave_status').on('change', function () {
+		table.column(5).search(this.value).draw();
+	});
+});
 function addLeave(UserId) {
     $.ajax({
         url: "{% url 'EmpAddLeaves' id=0 %}".replace(0, UserId),
