--- a/templates/admin/leaves.html
+++ b/templates/admin/leaves.html
@@ -3,127 +3,126 @@
 {% load static %}
 {% block body %}
 
-			<!-- Page Wrapper -->
-            <div class="page-wrapper">
-				<div class="show_message">
-            {% for message in messages %}
-            <div class="alert alert-{{ message.tags }}" role="alert">{{ message }}</div>
-            {% endfor %}
-        </div>
-			
-				<!-- Page Content -->
-                <div class="content container-fluid">
-				
-					<!-- Page Header -->
-					<div class="page-header">
-						<div class="row align-items-center">
-							<div class="col">
-								<h3 class="page-title">Leaves</h3>
-								<ul class="breadcrumb">
-									<li class="breadcrumb-item"><a href="index.html">Dashboard</a></li>
-									<li class="breadcrumb-item active">Leaves</li>
-								</ul>
-							</div>
-						</div>
-					</div>
-					<!-- /Page Header -->
-					
-					<!-- Search Filter -->
-					<div class="row filter-row">
-						<div class="col-sm-6 col-md-3">
-							<div class="form-group form-focus ">
-								<input type="text" class="form-control floating" id="name-search">
-								<label class="focus-label">Employee</label>
-							</div>
-						</div>
-						<div class="col-sm-6 col-md-3">
-							<div class="form-group form-focus ">
-								<input type="text" class="form-control floating" id="leave_type">
-								<label class="focus-label">Leave Type</label>
-							</div>
-						</div>
-						<div class="col-sm-6 col-md-2">
-							<div class="form-group form-focus select-focus">
-								<input type="date" class="form-control floating" id="from_date">
-								<label class="focus-label">From Date</label>
-							</div>
-						</div>
-						<div class="col-sm-6 col-md-2">
-							<div class="form-group form-focus select-focus">
-								<input type="date" class="form-control floating" id="to_date">
-								<label class="focus-label">To Date</label>
-							</div>
-						</div>
-						<div class="col-sm-6 col-md-2">
-							<div class="form-group form-focus select-focus">
-								<select class="form-control floating" id="leave_status">
-									<option value="">Select Status</option>
-									{% for status in leave_status %}
-										<option value="{{ status.0 }}">{{ status.1 }}</option>
-									{% endfor %}
-								</select>
-								<label class="focus-label">Leave Status</label>
-							</div>
-						</div>
-					</div>
-					<!-- /Search Filter -->
-					
-					<div class="row">
-						<div class="col-md-12">
-							<div class="table-responsive">
-								<table class="table table-striped custom-table mb-0" id="admin_leave_table">
-									<thead>
-										<tr>
-											<th>Employee</th>
-											<th>Leave Type</th>
-											<th>From</th>
-											<th>To</th>
-											<th>No of Days</th>
-											<th>Reason</th>
-											<th class="text-center">Status</th>
-										</tr>
-									</thead>
-									<tbody>
-										{% for leave in leave_list %}
-										<tr>
-											<td>
-												<h2 class="table-avatar">
-													<a href="profile.html" class="avatar"><img alt="" src="{{leave.leave_user.avatar.url}}"></a>
-													<a href="#">{{leave.leave_user.username}}<span>{{leave.leave_user.designation|default:""}}. {{leave.leave_user.technology|default:""}}</span></a>
+<!-- Page Wrapper -->
+<div class="page-wrapper">
+    <div class="show_message">
+        {% for message in messages %}
+        <div class="alert alert-{{ message.tags }}" role="alert">{{ message }}</div>
+        {% endfor %}
+    </div>
 
-												</h2>
-											</td>
-											<td>{{leave.leave_type}}</td>
-											<td>{{leave.leave_from|date:"j - M - Y"}}</td>
-											<td>{{leave.leave_to|date:"j - M - Y"}}</td>
-											<td>{{leave.leave_days}} days</td>
-											<td class="w-75 text-wrap">{{leave.leave_reason}}</td>
-											<td class="text-center">
-												<div class="dropdown action-label" >
-													<form action="{% url 'AdminLeaveStatusUpdate' leave.id %}" method="post">
-													{% csrf_token %}
-														<select class="px-2 py-2 border rounded-pill" onChange="this.form.submit();" name="leave_status">
-															<option selected disabled>New</option>
-															<option {% if leave.leave_status == "Approved" %}selected{% endif %}>Approved</option>
-															<option {% if leave.leave_status == "Declined" %}selected{% endif %}>Declined</option>
-														</select>
-													</form>
-												</div>
-											</td>
-										</tr>
-										{% endfor %}
-									</tbody>
-								</table>
-							</div>
-						</div>
-					</div>
+    <!-- Page Content -->
+    <div class="content container-fluid">
+
+        <!-- Page Header -->
+        <div class="page-header">
+            <div class="row align-items-center">
+                <div class="col">
+                    <h3 class="page-title">Leaves</h3>
+                    <ul class="breadcrumb">
+                        <li class="breadcrumb-item"><a href="index.html">Dashboard</a></li>
+                        <li class="breadcrumb-item active">Leaves</li>
+                    </ul>
                 </div>
-				<!-- /Page Content -->
-				
             </div>
-			<!-- /Page Wrapper -->
-<script type="text/javascript" src="{% static 'js/jquery-3.5.1.min.js' %}"></script>
-<script type="text/javascript" src="{% static 'js/jquery.dataTables.min.js' %}"></script>
+        </div>
+        <!-- /Page Header -->
+
+        <!-- Search Filter -->
+        <div class="row filter-row">
+            <div class="col-sm-6 col-md-3">
+                <div class="form-group form-focus ">
+                    <input class="form-control floating" id="name-search" type="text">
+                    <label class="focus-label">Employee</label>
+                </div>
+            </div>
+            <div class="col-sm-6 col-md-3">
+                <div class="form-group form-focus ">
+                    <input class="form-control floating" id="leave_type" type="text">
+                    <label class="focus-label">Leave Type</label>
+                </div>
+            </div>
+            <div class="col-sm-6 col-md-2">
+                <div class="form-group form-focus select-focus">
+                    <input class="form-control floating" id="from_date" type="date">
+                    <label class="focus-label">From Date</label>
+                </div>
+            </div>
+            <div class="col-sm-6 col-md-2">
+                <div class="form-group form-focus select-focus">
+                    <input class="form-control floating" id="to_date" type="date">
+                    <label class="focus-label">To Date</label>
+                </div>
+            </div>
+            <div class="col-sm-6 col-md-2">
+                <div class="form-group form-focus select-focus">
+                    <select class="form-control floating" id="leave_status">
+                        <option value="">Select Status</option>
+                        {% for status in leave_status %}
+                        <option value="{{ status.0 }}">{{ status.1 }}</option>
+                        {% endfor %}
+                    </select>
+                    <label class="focus-label">Leave Status</label>
+                </div>
+            </div>
+        </div>
+        <!-- /Search Filter -->
+
+        <div class="row">
+            <div class="col-md-12">
+                <div class="table-responsive">
+                    <table class="table table-striped custom-table mb-0" id="admin_leave_table">
+                        <thead>
+                        <tr>
+                            <th>Employee</th>
+                            <th>Leave Type</th>
+                            <th>From</th>
+                            <th>To</th>
+                            <th>No of Days</th>
+                            <th>Reason</th>
+                            <th class="text-center">Status</th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        {% for leave in leave_list %}
+                        <tr>
+                            <td>
+                                <h2 class="table-avatar">
+                                    <a class="avatar" href="profile.html"><img alt="" src="{{leave.leave_user.avatar.url}}"></a>
+                                    <a href="#">{{leave.leave_user.username}}<span>{{leave.leave_user.designation|default:""}}. {{leave.leave_user.technology|default:""}}</span></a>
+                                </h2>
+                            </td>
+                            <td>{{leave.leave_type}}</td>
+                            <td>{{leave.leave_from|date:"j - M - Y"}}</td>
+                            <td>{{leave.leave_to|date:"j - M - Y"}}</td>
+                            <td>{{leave.leave_days}} days</td>
+                            <td class="w-75 text-wrap">{{leave.leave_reason}}</td>
+                            <td class="text-center">
+                                <div class="dropdown action-label">
+                                    <form action="{% url 'AdminLeaveStatusUpdate' leave.id %}" method="post">
+                                        {% csrf_token %}
+                                        <select class="px-2 py-2 border rounded-pill" name="leave_status" onChange="this.form.submit();">
+                                            <option disabled selected>New</option>
+                                            <option {% if leave.leave_status == "Approved" %}selected{% endif %}>Approved</option>
+                                            <option {% if leave.leave_status == "Declined" %}selected{% endif %}>Declined</option>
+                                        </select>
+                                    </form>
+                                </div>
+                            </td>
+                        </tr>
+                        {% endfor %}
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- /Page Content -->
+
+</div>
+<!-- /Page Wrapper -->
+<script src="{% static 'js/jquery-3.5.1.min.js' %}" type="text/javascript"></script>
+<script src="{% static 'js/jquery.dataTables.min.js' %}" type="text/javascript"></script>
 <script>
 $(document).ready(function () {
 	var table = $('#admin_leave_table').DataTable({
@@ -140,6 +139,8 @@ $(document).ready(function () {
 	});
 });
 </script>
+
+
 <script>
     window.setTimeout(function() {
         $(".alert").fadeTo(500, 0).slideUp(500, function(){
