--- a/templates/employee/profile.html
+++ b/templates/employee/profile.html
@@ -122,24 +122,24 @@
 											<h3 class="card-title">Bank information</h3>
 											<ul class="personal-info">
 												<li>
-													<div class="title">Bank name</div>
-													<div class="text">ICICI Bank</div>
+													<div class="title">Bank Name : </div>
+													<div class="text">{{view_bank_info.bank_name}}</div>
 												</li>
 												<li>
-													<div class="title">Bank account No.</div>
-													<div class="text">159843014641</div>
+													<div class="title">Bank Account Number : </div>
+													<div class="text">{{view_bank_info.bank_account_number}}</div>
 												</li>
 												<li>
-													<div class="title">IFSC Code</div>
-													<div class="text">ICI24504</div>
+													<div class="title">Bank IFSC Code : </div>
+													<div class="text">{{view_bank_info.bank_ifsc_code}}</div>
 												</li>
 												<li>
-													<div class="title">PAN No</div>
-													<div class="text">TC000Y56</div>
+													<div class="title">PAN Card Number : </div>
+													<div class="text">{{view_bank_info.user_pan_card_number}}</div>
 												</li>
 												<li>
-													<div class="title">ADHAR No</div>
-													<div class="text">TC000Y56</div>
+													<div class="title">Aadhar Number : </div>
+													<div class="text">{{view_bank_info.user_aadhar_card_number}}</div>
 												</li>
 											</ul>
 										</div>
