--- a/templates/admin/add_project_assignee.html
+++ b/templates/admin/add_project_assignee.html
@@ -11,7 +11,7 @@
                     <span aria-hidden="true">&times;</span>
                 </button>
             </div>
-            <form action="{% url 'AdminAddProjectAssignee' project_id.id %}" method="post" id="form">
+            <form action="{% url 'AdminAddProjectAssignee' id=project_id %}" method="post" id="form">
             {% csrf_token %}
                 <div class="modal-body">
                     <div class="input-group m-b-30">
