--- a/templates/admin/leaves.html
+++ b/templates/admin/leaves.html
@@ -42,15 +42,15 @@
                     <label class="focus-label">Leave Type</label>
                 </div>
             </div>
-            <div class="col-sm-6 col-md-2">
-                <div class="form-group form-focus select-focus">
-                    <input class="form-control floating" id="from_date" type="date">
+             <div class="col-sm-6 col-md-2">
+                <div class="form-group form-focus">
+                    <input class="form-control floating datetimepicker" id="from_date" type="text">
                     <label class="focus-label">From Date</label>
                 </div>
             </div>
             <div class="col-sm-6 col-md-2">
-                <div class="form-group form-focus select-focus">
-                    <input class="form-control floating" id="to_date" type="date">
+                <div class="form-group form-focus">
+                    <input class="form-control floating datetimepicker" id="to_date" type="text">
                     <label class="focus-label">To Date</label>
                 </div>
             </div>
@@ -93,8 +93,8 @@
                                 </h2>
                             </td>
                             <td>{{leave.leave_type}}</td>
-                            <td>{{leave.leave_from|date:"j - M - Y"}}</td>
-                            <td>{{leave.leave_to|date:"j - M - Y"}}</td>
+                            <td>{{leave.leave_from|date:"d - m - Y"}}</td>
+                            <td>{{leave.leave_to|date:"d - m - Y"}}</td>
                             <td>{{leave.leave_days}} days</td>
                             <td class="w-75 text-wrap">{{leave.leave_reason}}</td>
                             <td class="text-center">
@@ -123,23 +123,64 @@
 <!-- /Page Wrapper -->
 <script src="{% static 'js/jquery-3.5.1.min.js' %}" type="text/javascript"></script>
 <script src="{% static 'js/jquery.dataTables.min.js' %}" type="text/javascript"></script>
+<script src="{% static 'js/bootstrap-datetimepicker.min.js' %}"></script>
 <script>
 $(document).ready(function () {
-	var table = $('#admin_leave_table').DataTable({
-		dom: 'Blrtip',
-	});
-	 $('#name-search').on('keyup', function () {
-		table.column(0).search(this.value).draw();
-	});
-	 $('#leave_type').on('keyup', function () {
-		table.column(1).search(this.value).draw();
-	});
-	$('#leave_status').on('change', function () {
-		table.column(7).search(this.value).draw();
-	});
+    var table = $('#admin_leave_table').DataTable({
+        dom: 'Blrtip',
+    });
+
+    $('#name-search').on('keyup', function () {
+        table.column(0).search(this.value).draw();
+    });
+
+    $('#leave_type').on('keyup', function () {
+        table.column(1).search(this.value).draw();
+    });
+
+    $('.datetimepicker').datetimepicker({
+        autoclose: true,
+        format: 'dd-mm-yyyy'
+    });
+
 });
 </script>
+<script>
+    let minDate, maxDate;
 
+// Custom filtering function which will search data in column four between two values
+DataTable.ext.search.push(function (settings, data, dataIndex) {
+    let min = minDate.val();
+    let max = maxDate.val();
+    let date = new Date(data[2]);
+
+    if (
+        (min === null && max === null) ||
+        (min === null && date <= max) ||
+        (min <= date && max === null) ||
+        (min <= date && date <= max)
+    ) {
+        return true;
+    }
+    return false;
+});
+
+// Create date inputs
+minDate = new DateTime('#from_date', {
+    format: 'DD-MM-YYYY'
+});
+maxDate = new DateTime('#to_date', {
+    format: 'DD-MM-YYYY'
+});
+
+// DataTables initialisation
+let table = new DataTable('#admin_leave_table');
+
+// Refilter the table
+document.querySelectorAll('#from_date, #to_date').forEach((el) => {
+    el.addEventListener('input', () => table.draw());
+});
+</script>
 
 <script>
     window.setTimeout(function() {
